<resources>
    <string name="app_name">MyNot</string>
    <!-- CardViews Names-->
    <string name="science">Ciencia</string>
    <string name="autonomous_communities">C. Autónomas</string>
    <string name="sports">Deportes</string>
    <string name="economy">Economía</string>
    <string name="international">Internacional</string>
    <string name="spain">España</string>
    <string name="technology">Tecnología</string>
    <string name="last_news">Últimas Noticias</string>

    <string name="andalucia">Andalucía</string>
    <string name="aragon">Aragón</string>
    <string name="asturias">Asturias</string>
    <string name="cantabria">Cantabria</string>
    <string name="castillalamancha">Castilla-La Mancha</string>
    <string name="castillaleon">Castilla y León</string>
    <string name="catalunya">Cataluña</string>
    <string name="ceutamelilla">Ceuta y Melilla</string>
    <string name="comunidadvalenciana">C. Valenciana</string>
    <string name="extremadura">Extremadura</string>
    <string name="galicia">Galicia</string>
    <string name="islasbaleares">Islas Baleares</string>
    <string name="islascanarias">Islas Canarias</string>
    <string name="larioja">La Rioja</string>
    <string name="madrid">Madrid</string>
    <string name="murcia">Murcia</string>
    <string name="navarra">Navarra</string>
    <string name="paisvasco">País Vasco</string>

    <!-- DB Names-->
    <string name="science_db">Ciencia</string>
    <string name="autonomous_communities_db">ComunidadesAutonomas</string>
    <string name="sports_db">Deportes</string>
    <string name="economy_db">Economía</string>
    <string name="international_db">Internacional</string>
    <string name="spain_db">Nacional</string>
    <string name="technology_db">Tecnología</string>
    <string name="last_news_db">UltimasNoticias</string>

    <string name="andalucia_db">Andalucia</string>
    <string name="aragon_db">Aragon</string>
    <string name="asturias_db">Asturias</string>
    <string name="cantabria_db">Cantabria</string>
    <string name="castillalamancha_db">CastillaLaMancha</string>
    <string name="castillaleon_db">Castilla y León</string>
    <string name="catalunya_db">Cataluna</string>
    <string name="ceutamelilla_db">CeutaMelilla</string>
    <string name="comunidadvalenciana_db">ComunidadValenciana</string>
    <string name="extremadura_db">Extremadura</string>
    <string name="galicia_db">Galicia</string>
    <string name="islasbaleares_db">Baleares</string>
    <string name="islascanarias_db">Canarias</string>
    <string name="larioja_db">Rioja</string>
    <string name="madrid_db">Madrid</string>
    <string name="murcia_db">Murcia</string>
    <string name="navarra_db">Navarra</string>
    <string name="paisvasco_db">PaísVasco</string>

    <string name ="country_db">Spain</string>
    <!-- Others-->
    <string name="newspaper_test">Periódico de Prueba</string>

    <string name="drawer_open">navigation drawer abierto</string>
    <string name="drawer_close">navigation drawer cerrado</string>

</resources>
